# backup-system

./: .gitignore  DOCUMENTATION.md  READEME1.md  README.md  guide.txt  pyproject.toml  requirements.txt  setup.py  setup_nouveau_pc.ps1  stp.txt
mybackup/: __init__.py  __main__.py  backup.py  cli.py  config.py  crypto.py  database.py  priority.py  restore.py  restore_all.py  utils.py  watcher.py
tests/: test_basic.py  test_priority.py  test_smart_backup.py
